Wed Apr 23 14:10:50 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* file.c (statfs_fsid): remove statfs.f_fsid because it doesn't return
	  meaningful value portably. http://togetter.com/li/658517

Wed Apr 23 11:03:41 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_write): use rb_str_append to
	  reuse coderange bits other than ASCII-8BIT, and keep
	  taintedness.  [ruby-dev:48118] [Bug #9769]

Wed Apr 23 00:43:00 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c, include/ruby/win32.h (ustatfs): implementation of
	  statfs(2) clone. [EXPERIMENTAL]

	* file.c (rb_io_statfs): use above function.

	* configure.in, win32/Makefile.sub (struct statfs): available.

Tue Apr 22 23:56:24 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (rb_io_stafs): use statfs(2) if fstatfs(2) is unavailable.

	* configure.in (fstatfs): check it.

Tue Apr 22 22:15:51 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (rb_io_statfs): need to define even if the system doesn't have
	  fstatfs(2).

	* test/ruby/test_file.rb (TestFile#test_statfs): skip if IO#stafs is not
	  implemented.

Tue Apr 22 19:32:48 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* file.c: newly added a class File::Statfs. (experimental)

Tue Apr 22 08:22:33 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (objspace_malloc_increase): don't cause GC by malloc_increase
	  when memop type is MEMOP_TYPE_REALLOC.

	  GC at realloc is not well maintained.
	  We need a time to make it safe.
	  [ruby-dev:48117]

Tue Apr 22 06:54:15 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (objspace_malloc_increase): run full mark if 0x04 bit is
	  set in ruby_gc_stress.  [ruby-core:62103] [Feature #9761]

	* gc.c (objspace_malloc_increase): run GC after realloc not only
	  malloc and calloc by GC.stress.  [ruby-core:62103] [Feature #9761]

Mon Apr 21 19:12:20 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_coderange_scan_restartable): coderange is always